# SnipingToolAltt

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __main__.py  app.py
src/services/: clipboard.py  filemanager.py  keybind.py  screenshot.py
src/ui/: overlay.py  settingsdialog.py
src/utils/: config.py
